test/parse_errors/float64_with_comma.go
package main

import "fmt"

func main(){
    car a float64 = 42,0
}